--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="../mq004/estilos/style.css" media="all">
-    <link rel="stylesheet" href="../mq004/estilos/mediaquery.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/mediaquery.css">
 </head>
 <body>
     <main>
         <h1>Testando media Queries</h1>
-        <img id="phone" src="../mq004/imagens/icon-phone.png" alt="Telefone">
-        <img id="tablet" src="../mq004/imagens/icon-tablet.png" alt="Tablet">
-        <img id="print" src="../mq004/imagens/icon-print.png" alt="Impressora">
-        <img id="pc" src="../mq004/imagens/icon-pc.png" alt="Computador">
-        <img id="tv" src="../mq004/imagens/icon-tv.png" alt="Televisão">
+        <img id="phone" src="imagens/icon-phone.png" alt="Telefone">
+        <img id="tablet" src="imagens/icon-tablet.png" alt="Tablet">
+        <img id="print" src="imagens/icon-print.png" alt="Impressora">
+        <img id="pc" src="imagens/icon-pc.png" alt="Computador">
+        <img id="tv" src="imagens/icon-tv.png" alt="Televisão">
     </main>
 </body>
 </html>
