--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main>
-        <h1>Testando media Queries</h1>
+        <h1>Testando Media Queries</h1>
         <img id="phone" src="imagens/icon-phone.png" alt="Telefone">
         <img id="tablet" src="imagens/icon-tablet.png" alt="Tablet">
         <img id="print" src="imagens/icon-print.png" alt="Impressora">
